--- a/sito/style.css
+++ b/sito/style.css
@@ -9,8 +9,8 @@ body, html {
 }
 
 body {
-	margin:0;
-	padding:0;
+	margin: 0;
+	padding: 0;
 	display: flex;
 	display: -webkit-flex;
 	flex-flow: row nowrap;
@@ -26,10 +26,11 @@ body {
 	color: black;
 	padding-left: 55px;
 	display: inline-block;
-	margin-top:20px;
-	margin-bottom:20px;
+	margin-top: 20px;
+	margin-bottom: 20px;
 }
-#menu{
+
+#menu {
 	margin: 0;
 	padding: 0;
 }
@@ -53,7 +54,7 @@ body {
 
 .leftSide {
 	border: 5px solid #005000;
-	grid-area: leftSide; 
+	grid-area: leftSide;
 	width: 240px;
 	height: 1fr;
 	background-repeat: no-repeat;
@@ -61,12 +62,14 @@ body {
 	background-repeat: no-repeat;
 	background-attachment: fixed;
 }
+
 .body {
 	border: 5px solid #005000;
 	grid-area: body;
-	width: 950px;
-	height:2300px;
+	width: 900px;
+	height: 2300px;
 }
+
 .rightSide {
 	border: 5px #005000 solid;
 	grid-area: rightSide;
@@ -77,8 +80,9 @@ body {
 	background-repeat: no-repeat;
 	background-attachment: fixed;
 }
+
 .footer {
-	grid-area: footer; 
+	grid-area: footer;
 	height: 150px;
 	width: 1fr;
 	background-color: #022600;
@@ -92,15 +96,14 @@ body {
 	float: left;
 	padding-right: 30px;
 }
-	
-.logo img {
-	height: 140px;
-	width: 90px;
-	margin: auto;
-	padding-top: 5px;
-	padding-bottom: 30px;
-	 
-}
+
+	.logo img {
+		height: 140px;
+		width: 90px;
+		margin: auto;
+		padding-top: 5px;
+		padding-bottom: 30px;
+	}
 
 #title {
 	height: 230px;
@@ -113,24 +116,24 @@ body {
 	padding-left: 66px;
 }
 
-#title .name {
-	height: 60px;
-	width: 59%;
-	text-align: auto;
-	display: inline-block;
-}
+	#title .name {
+		height: 60px;
+		width: 59%;
+		text-align: auto;
+		display: inline-block;
+	}
 
-#title .subname {
-	height: 40px;
-	width: 70%;
-	text-align: auto;
-	display: inline-block;
-}
+	#title .subname {
+		height: 40px;
+		width: 70%;
+		text-align: auto;
+		display: inline-block;
+	}
 
-#title .login {
-	float: right;
-	margin-right: 30px;
-}
+	#title .login {
+		float: right;
+		margin-right: 30px;
+	}
 
 .subname h3 {
 	text-align: left;
@@ -160,19 +163,19 @@ body {
 	width: 70px;
 }
 
-#menu a{
+#menu a {
 	color: black;
 	text-decoration: none;
 	font-size: 15px;
-	font-weight:bold;
+	font-weight: bold;
+}
 
-}
-#menu a:hover{
-	text-decoration: none;
-	color: #005000;
-	font-weight:bold;
-	/*font-size: 16px;*/
-}
+	#menu a:hover {
+		text-decoration: none;
+		color: #005000;
+		font-weight: bold;
+		/*font-size: 16px;*/
+	}
 
 
 #corpo p {
@@ -182,15 +185,16 @@ body {
 }
 
 nav {
-	border:none;
+	border: none;
 	float: left;
 	width: 18%;
 	height: 100%;
 	display: inline-block;
 	background-color: #106850;
 }
+
 aside {
-	border:none;
+	border: none;
 	float: right;
 	width: 18%;
 	height: 100%;
@@ -214,7 +218,7 @@ footer {
 
 .a {
 	height: 15px;
-	border-width:0;
+	border-width: 0;
 	color: #005000;
 	background-color: #005000;
 }
@@ -257,7 +261,6 @@ footer {
 	color: white;
 	display: flex;
 	font-size: 15px;
-	
 }
 
 #copyblock {
@@ -265,9 +268,10 @@ footer {
 	padding-left: 15px;
 	width: 300 px;
 	height: 140px;
-	float:left;
+	float: left;
 	flex-direction: column;
 }
+
 .contatti2 {
 	float: left;
 	color: white;
@@ -278,7 +282,7 @@ footer {
 
 #copyblock a:hover {
 	text-decoration: underline;
-	font-weight:bold;
+	font-weight: bold;
 	font-size: 16px;
 }
 
@@ -290,121 +294,125 @@ div #hormenu {
 	/*background: ;*/
 }
 
-div#hormenu ul
-{
-margin: 0;
-padding: 0;
-list-style-type: none;
-}
+	div#hormenu ul {
+		margin: 0;
+		padding: 0;
+		list-style-type: none;
+	}
 
-div#hormenu li
-{
-width:100px;
-float:left;
-margin: 0;
-padding: 0;
-color:black;
-}
+	div#hormenu li {
+		width: 100px;
+		float: left;
+		margin: 0;
+		padding: 0;
+		color: black;
+	}
 
-div#hormenu a
-{
-display: block;
-padding: 5px;
-color: #000;
-text-decoration: none;
-}
+	div#hormenu a {
+		display: block;
+		padding: 5px;
+		color: #000;
+		text-decoration: none;
+	}
 
-div#hormenu a:hover
-{
-background-color: #000033;
-color: #FFFFFF;
-text-decoration: none;
-}
+		div#hormenu a:hover {
+			background-color: #000033;
+			color: #FFFFFF;
+			text-decoration: none;
+		}
 
-div#hormenu li ul
-{
-display: none
-}
+	div#hormenu li ul {
+		display: none
+	}
 
-div#hormenu li:hover ul
-{
-display: block;
-position: absolute;
-z-index:1;
-width:99px;
-padding: 0;
-margin: 0 0 0 -1px;
-border:1px solid black;
-background: white;
-}
+	div#hormenu li:hover ul {
+		display: block;
+		position: absolute;
+		z-index: 1;
+		width: 99px;
+		padding: 0;
+		margin: 0 0 0 -1px;
+		border: 1px solid black;
+		background: white;
+	}
 
-div#hormenu li li { 
-	border:none; 
-	width: 99px;
-}
-div#hormenu li li a {
-	padding:2px 2px 2px 10px; 
-}
+	div#hormenu li li {
+		border: none;
+		width: 99px;
+	}
 
-div#hormenu .lingua {
-	color: white;
-	text-decoration: none;
- text-shadow: 2px 0 0 black, -2px 0 0 black, 0 2px 0 black, 0 -2px 0 black, 1px 1px black, -1px -1px 0 black, 1px -1px 0 black, -1px 1px 0 black;
-}
+		div#hormenu li li a {
+			padding: 2px 2px 2px 10px;
+		}
+
+	div#hormenu .lingua {
+		color: white;
+		text-decoration: none;
+		text-shadow: 2px 0 0 black, -2px 0 0 black, 0 2px 0 black, 0 -2px 0 black, 1px 1px black, -1px -1px 0 black, 1px -1px 0 black, -1px 1px 0 black;
+	}
 /* fine style css*/
 
 /*inizio css per grafici*/
 
-.chartBox{
-    width:700px !important;
-    height:700px !important;
+.chartBox {
+	width: 700px !important;
+	height: 700px !important;
 	margin: 0 auto;
-	margin-top:20px;
+	margin-top: 20px;
 }
-#myChart1{
-    border:2px solid green;
+
+#myChart1 {
+	border: 2px solid green;
 }
-#myChart2{
-    border:2px solid green;
+
+#myChart2 {
+	border: 2px solid green;
 }
-#myChart{
-    border:2px solid green; 
+
+#myChart {
+	border: 2px solid green;
 }
 /*fine css per grafici*/
 
 /*inizio css i nostri prodotti*/
-.menuz{
-	color:green;
+.menuz {
+	color: green;
 }
-.caselle{
-    border: 2px solid #005000;
-    width: 250px;
-    height: 350px;
-    margin-top: 10px;
-    margin-left: 10px;
-    display: inline-block;
-    min-height:404;
+
+.caselle {
+	border: 2px solid #005000;
+	width: 250px;
+	height: 350px;
+	margin-top: 10px;
+	margin-left: 10px;
+	display: inline-block;
+	min-height: 404;
 }
-.img{
-    padding: 15px;
-    width:220px;
-    height:270px;
+
+.img {
+	padding: 15px;
+	width: 220px;
+	height: 270px;
 }
-.caselle figcaption{
-    text-align: center;
-    font-weight:bold;
-	margin-top:2px;
+
+.caselle figcaption {
+	text-align: center;
+	font-weight: bold;
+	margin-top: 2px;
 	color: black;
 }
-.caselle figcaption:hover{
-    text-decoration:underline;
-    color:green;
-    cursor: zoom-in;
+
+	.caselle figcaption:hover {
+		text-decoration: underline;
+		color: green;
+		cursor: zoom-in;
+	}
+
+.img:hover {
+	text-decoration: underline;
+	cursor: crosshair;
 }
-.img:hover{
-    text-decoration:underline;
-    cursor: crosshair;
-}
+
 .caselle a {
 	text-decoration: none;
 }
@@ -412,11 +420,12 @@ div#hormenu .lingua {
 
 /*inizio css serre*/
 
-.imgdettaglio{
-    float: left;
+.imgdettaglio {
+	float: left;
 	padding-left: 25px;
 	padding-top: 15px;
 }
+
 .titolodettaglio {
 	text-align: center;
 	display: grid;
@@ -425,49 +434,55 @@ div#hormenu .lingua {
 	font-size: 25px;
 	color: #022600;
 }
-ol{
-    margin-left: auto;
-    margin-top: 230px;
+
+ol {
+	margin-left: auto;
+	margin-top: 230px;
 }
-.int{
-    list-style:none;
-    margin-left:-15px;
-    font-weight:bold;
-    margin-bottom:5px;
+
+.int {
+	list-style: none;
+	margin-left: -15px;
+	font-weight: bold;
+	margin-bottom: 5px;
 }
-li{
-    list-style:none;    
+
+li {
+	list-style: none;
 }
 
 /*fine css serre*/
 
 /*inizio css serra base*/
 
-.testobase{
+.testobase {
 	font-size: 20px;
 	padding-left: 10px;
 	padding-right: 10px;
 	text-align: center;
 	width: auto;
 }
-ol{
-	
+
+ol {
 	font-size: 20px;
 }
-.a1{
-	width:250px;
-	height:400px;
-	border:2px solid black;
-	margin-left:30px;
-	display:inline-block;
-	margin-top:30px;
+
+.a1 {
+	width: 250px;
+	height: 400px;
+	border: 2px solid black;
+	margin-left: 30px;
+	display: inline-block;
+	margin-top: 30px;
 	overflow: auto;
 }
-.rt{
+
+.rt {
 	width: 625px;
-	float:right;
+	float: right;
 }
-.centercaselle{
+
+.centercaselle {
 	text-align: center;
 	padding-top: 10px;
 }
@@ -606,11 +621,12 @@ ol{
 	text-align: center;
 }
 
-.abuy3:hover {
-	width: 115px;
-	height: 65px;
-	font-size: 22px;
-}
+	.abuy3:hover {
+		width: 115px;
+		height: 65px;
+		font-size: 22px;
+	}
+
 .pno {
 	text-decoration: line-through;
 	font-size: 16px;
@@ -633,70 +649,84 @@ ol{
 }
 /*fine serra base*/
 /*inizio chi siamo*/
-.chisiamo{
+.chisiamo {
 	font-size: 50px;
-	color:darkgreen;
+	color: darkgreen;
 	margin-left: 20px;
 }
-.text{
-	font-size:19px;
+
+.text {
+	font-size: 19px;
 	font-family: sans-serif;
 }
-.text2{
-	color:green;
-	display:inline-block;
+
+.text2 {
+	color: green;
+	display: inline-block;
 }
-.chisiamo2{
-	font-size:28px;
-	margin-top:70px;
-	color:darkgreen;
-	margin-left:20px;
+
+.chisiamo2 {
+	font-size: 28px;
+	margin-top: 70px;
+	color: darkgreen;
+	margin-left: 20px;
 }
-.text2:hover{
+
+.text2:hover {
 	text-decoration: underline;
 	font-weight: bold;
 }
-.mappa{
+
+.mappa {
 	text-align: center;
 	margin-top: 80px;
 }
-.testograf{
+
+.testograf {
 	font-size: 20px;
 	padding-bottom: 35px;
 }
-.pdf{
+
+.pdf {
 	text-decoration: none;
-	color:black;
+	color: black;
 }
-.avatar{
+
+.avatar {
 	display: inline-block;
 }
-.avatar img{
-	border-radius: 50%;
-}
-.savani{
+
+	.avatar img {
+		border-radius: 50%;
+	}
+
+.savani {
 	text-align: center;
 	display: grid;
 }
-.homee{
-	color:darkgreen;
+
+.homee {
+	color: darkgreen;
 	text-align: center;
-	font-size:50px;
+	font-size: 50px;
 }
+
 .animate__animated.animate__swing {
 	--animate-duration: 1.4s;
+}
 
+.videoserra {
+	text-align: center;
 }
-.videoserra{
-	text-align:center;
-}
-.home2{
-	color:darkgreen;
+
+.home2 {
+	color: darkgreen;
 	text-align: center;
 	font-size: 35px;
 }
-.titgrafici{
-	text-align:center;
+
+.titgrafici {
+	text-align: center;
 	font-size: 40px;
 	color: darkgreen;
 }
